test/checker/fail/check_yield_outside_async.ms
const foo := proc () { yield 42; };
